--- a/odev3.html
+++ b/odev3.html
@@ -6,48 +6,54 @@
             Sıralı yazma
         </title>
         <style>
-            .card{
-                background-color: lightseagreen;
+            .sol{
+                background-color: lightseagreen; width: 299px; height: 400px; float: left;
                 margin-left: 0%;
+            }
+            .sag{
+                text-align:left;
+                background-color: thistle; width: 600px; height: 400px; float:left;
+                margin-left: 0%;
+
+            }
+            .solbaslik{
+                background-color: lightseagreen; width: 299px; float: left;
+            }
+            .sagbaslik{
+                background-color: thistle; width: 598px; float:left;
             }
         </style>
     </head>
     <body>
-        <div style="float:left;width:40%">
-            <div class="card" style="width: 500px;">
-            <div class="card-header">
-                JS Documentation
-            </div>
-            <hr>
-                <ul style="list-style-type:none">
-                    <li>Introduction</li>
-                    <hr>
-                    <li>What you should already know</li>   
-                    <hr>             
-                    <li>JavaScript and Java</li>
-                    <hr>
-                    <li>Hello world</li>
-                    <hr>
-                    <li>Variables</li>
-                    <hr>
-                    <li>Declaring Variables</li>
-                    <hr>
-                    <li>Variable scope</li>
-                    <hr>
-                </ul>
-            </div>
-        </div>
-        <div class="sag" style="float:left;width:60%">
-            <label>
-                <h5>Three men and a train - Üç adam ve bir tren</h5> <br>
-                Three men stood drinking at a bar near a railway station. They were waiting for a train and had asked the railway porter to inform them when the train arrived. A short time later the porter appeared in the door way of the bar to tell them that the train was just coming in.
-                Ah! said the men. We have time for just one more drink. They all took another drink and ran out, but they missed the train.
-                Again they went back to the bar to wait for the next train. They continued drinking. An hour later the second train arrived and the same thing happened. They missed the train again in the same way.
-                Two hours later the porter appeared to say that the third and last train was just coming in. Again the men waited long enough to have one more drink, and then they all ran out. Two of the men, being tall men, could run fairly fast. They caught the train. But the third man, who was little, missed the train again. Very slowly, he walked back to the bar and began drinking again.
-                By the way, the barkeeper said to him after a while, what town are your two friends going to?
-                I don’t know where they’re going, the little man said. They just came down to the station to see me off.
-            </label>
-        </div>
-        <div style="clear:both;"></div>
+        <table>
+            <tr class="sol">
+                <th class="solbaslik"><h3>JS Documentation</h3></th>
+                <td rowspan="2">
+                        <hr>
+                        <ul style="list-style-type:none">
+                        <li style="border-style: groove; width: 255px; height: 30px;">Introduction</li>
+                        <li style="border-style: groove; width: 255px; height: 30px;">What you should already know</li>              
+                        <li style="border-style: groove; width: 255px; height: 30px;">JavaScript and Java</li>
+                        <li style="border-style: groove; width: 255px; height: 30px;">Hello world</li>
+                        <li style="border-style: groove; width: 255px; height: 30px;">Variables</li>
+                        <li style="border-style: groove; width: 255px; height: 30px;">Declaring Variables</li>
+                        <li style="border-style: groove; width: 255px; height: 30px;">Variable scope</li>
+                        </ul>
+                </td>
+            </tr>
+            <tr class="sag">
+                <th class="sagbaslik"><h2>Three men and a train - Üç adam ve bir tren</h2></th>
+                <td>
+                    <label>
+                        Three men stood drinking at a bar near a railway station. They were waiting for a train and had asked the railway porter to inform them when the train arrived. A short time later the porter appeared in the door way of the bar to tell them that the train was just coming in.
+                        Ah! said the men. We have time for just one more drink. They all took another drink and ran out, but they missed the train.
+                        Again they went back to the bar to wait for the next train. They continued drinking. An hour later the second train arrived and the same thing happened. They missed the train again in the same way.
+                        Two hours later the porter appeared to say that the third and last train was just coming in. Again the men waited long enough to have one more drink, and then they all ran out. Two of the men, being tall men, could run fairly fast. They caught the train. But the third man, who was little, missed the train again. Very slowly, he walked back to the bar and began drinking again.
+                        By the way, the barkeeper said to him after a while, what town are your two friends going to?
+                        I don’t know where they’re going, the little man said. They just came down to the station to see me off.
+                    </label>
+                </td>
+            </tr>
+        </table>
     </body>
 </html>
