--- a/odev3.html
+++ b/odev3.html
@@ -7,12 +7,12 @@
         </title>
         <style>
             .sol{
-                background-color: lightseagreen; width: 299px; height: 400px; float: left;
+                background-color: lightseagreen; width: 299px; height: 500px; float: left;
                 margin-left: 0%;
             }
             .sag{
                 text-align:left;
-                background-color: thistle; width: 600px; height: 400px; float:left;
+                background-color: thistle; width: 600px; height: 500px; float:left;
                 margin-left: 0%;
 
             }
@@ -30,16 +30,16 @@
         <table>
             <tr class="sol">
                 <th class="solbaslik"><br>JS Documentation</th>
-                <td rowspan="2">
-                        <hr>
-                        <ul style="list-style-type:none">
-                        <li style="border-style: groove; width: 255px; height: 30px;">Introduction</li>
-                        <li style="border-style: groove; width: 255px; height: 30px;">What you should already know</li>              
-                        <li style="border-style: groove; width: 255px; height: 30px;">JavaScript and Java</li>
-                        <li style="border-style: groove; width: 255px; height: 30px;">Hello world</li>
-                        <li style="border-style: groove; width: 255px; height: 30px;">Variables</li>
-                        <li style="border-style: groove; width: 255px; height: 30px;">Declaring Variables</li>
-                        <li style="border-style: groove; width: 255px; height: 30px;">Variable scope</li>
+                <td style="width: 299px;">
+                        
+                        <ul style="list-style-type:none; padding-left: 0px;">
+                        <li style="border-style: groove; width: 291px; height: 50px;"><br>Introduction</li>
+                        <li style="border-style: groove; width: 291px; height: 50px;"><br>What you should already know</li>              
+                        <li style="border-style: groove; width: 291px; height: 50px;"><br>JavaScript and Java</li>
+                        <li style="border-style: groove; width: 291px; height: 50px;"><br>Hello world</li>
+                        <li style="border-style: groove; width: 291px; height: 50px;"><br>Variables</li>
+                        <li style="border-style: groove; width: 291px; height: 50px;"><br>Declaring Variables</li>
+                        <li style="border-style: groove; width: 291px; height: 50px;"><br>Variable scope</li>
                         </ul>
                 </td>
             </tr>
