--- a/ödevler/menu-ust.html
+++ b/ödevler/menu-ust.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Odevler
+            Odevler2
         </title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style-menu-ust.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
@@ -26,14 +26,16 @@
                 <li><a href="#">Menu1</a></li>
                 <li><a href="#">Menu1.1</a></li>
                 <li><a href="#">Menu1.2</a></li>
-                <li><a href="#" id="menu2" onclick="menu2();">Menu1.3
+                <li><a href="#">Menu1.3
+                </a></li>
+                <li id="menu2" onclick="menu2();"><a href="#">Menu1.4</a></li>
+                <div class="secondMenu">
                     <ul id="secondMenu">
                         <li><a href="#">Menu2</a></li>
                         <li><a href="#">Menu2.1</a></li>
                         <li><a href="#">Menu2.2</a></li>
                     </ul>
-                </a></li>
-                <li><a href="#">Menu1.4</a></li>           
+                </div>           
                 </ul>
  
             </div>
@@ -56,6 +58,7 @@
             function menu2() {
                 if (secondMenu.style.maxHeight=="0px") {
                     secondMenu.style.maxHeight="150px";
+
                 }else{
                     secondMenu.style.maxHeight="0px";
                 }
