--- a/ödevler/whatsapp.html
+++ b/ödevler/whatsapp.html
@@ -243,7 +243,9 @@
                             <div class="ortaalan">
                                 <h1>Telefonunuzu bağlı tutun</h1>
                                 <div class="acıklama">WhatsApp, mesajları senkronize etmek için telefonunuza bağlanır. Veri kullanımını azaltmak için telefonunuzdan Wi-Fi'a bağlanın.</div>
-                                <div class="_11TMV"><div class="_1_9wz"></div><div class="_3ZJFu"><span class="_33d9M"><span data-testid="laptop" data-icon="laptop" class=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 18" width="21" height="18"><path fill="currentColor" d="M10.426 14.235a.767.767 0 0 1-.765-.765c0-.421.344-.765.765-.765s.765.344.765.765-.344.765-.765.765zM4.309 3.529h12.235v8.412H4.309V3.529zm12.235 9.942c.841 0 1.522-.688 1.522-1.529l.008-8.412c0-.842-.689-1.53-1.53-1.53H4.309c-.841 0-1.53.688-1.53 1.529v8.412c0 .841.688 1.529 1.529 1.529H1.25c0 .842.688 1.53 1.529 1.53h15.294c.841 0 1.529-.688 1.529-1.529h-3.058z"></path></svg></span></span><div class="_3yRMq">WhatsApp'ı Windows'ta kullanabilirsiniz. <a href="https://www.whatsapp.com/download" target="_blank">Buradan edinin</a>.</div></div></div>
+                                <div class="_11TMV"><div class="_1_9wz"></div><div class="_3ZJFu">
+                                    <span class="_33d9M"><span data-testid="laptop" data-icon="laptop" class=""><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 18" width="21" height="18"><path fill="currentColor" d="M10.426 14.235a.767.767 0 0 1-.765-.765c0-.421.344-.765.765-.765s.765.344.765.765-.344.765-.765.765zM4.309 3.529h12.235v8.412H4.309V3.529zm12.235 9.942c.841 0 1.522-.688 1.522-1.529l.008-8.412c0-.842-.689-1.53-1.53-1.53H4.309c-.841 0-1.53.688-1.53 1.529v8.412c0 .841.688 1.529 1.529 1.529H1.25c0 .842.688 1.53 1.529 1.53h15.294c.841 0 1.529-.688 1.529-1.529h-3.058z"></path></svg></span></span>        
+                                    <div class="_3yRMq">WhatsApp'ı Windows'ta kullanabilirsiniz. <a href="https://www.whatsapp.com/download" target="_blank">Buradan edinin</a>.</div></div></div>
                             </div>
                         </div>
                     </div>
